<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFFFFF"
    tools:context=".LoadingScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/img"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/lyName"
            android:layout_marginTop="30dp"
            android:paddingStart="70dp"
            tools:ignore="RtlSymmetry"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/longName"
            android:layout_marginTop="10dp"
            android:paddingStart="70dp"
            tools:ignore="RtlSymmetry"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/khoaName"
            android:layout_marginTop="10dp"
            android:paddingStart="70dp"
            tools:ignore="RtlSymmetry"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>