<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="UselessParent"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/gb_nen_mau_nau"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2048"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/gb_nen_mau_nau">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/point"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/txtPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="1000"
                    android:textStyle="bold"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnNewGame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:backgroundTint="@color/brown"
                android:text="@string/newGame"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btnUndo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/brown"
                android:text="@string/undo" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp">

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gdvGamePlay"
            android:numColumns="4"
            android:background="@drawable/gb_nen_mau_nau">

        </GridView>

    </RelativeLayout>
</LinearLayout>